# simple-partition

./: Cargo.toml  LICENSE  README.md
examples/main/: main.rs
graphs/: LICENSE
src/: annealing.rs  bisection.rs  graph.rs  lib.rs  partition_util.rs
