[package]
name = "simple-partition"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_partition"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
rand = "0.8.5"

[dev-dependencies]
env_logger = "0.10.0"

[[example]]
name = "main"
